# tflm_tree-model_switch

./: CMakeLists.txt  README.md
examples/hello_world/: CMakeLists.txt  evaluate_test.cc
examples/micro_speech/: CMakeLists.txt  main.cc  main_functions.cc
examples/person_detection/: CMakeLists.txt  main.cc  main_functions.cc  main_functions.h
src/: CMakeLists.txt  main.cpp
